--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -49,7 +49,7 @@ on:
         - 'XY-C1'
         - 'ZTE-E8820S'
         - 'WE410443-TC'
-        default: 'K2P'
+        default: 'DIR-878'
       release:
         type: boolean
         description: 'upload to release'
@@ -59,12 +59,12 @@ jobs:
     name: ${{ inputs.target }}
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: hendrikmuhs/ccache-action@v1.2.3
-      - uses: actions/setup-go@v3
+      - uses: actions/checkout@v4.1.1
+      - uses: hendrikmuhs/ccache-action@v1.2.10
+      - uses: actions/setup-go@v4.1.0
         with:
           go-version: '^1.19.2'
-      - uses: actions/cache@v3
+      - uses: actions/cache@v3.3.2
         with:
           path: |
             ~/.cache/go-build
@@ -80,11 +80,11 @@ jobs:
         run: |
           make ${{ inputs.target }}
           echo "TAG_ANME=$(date +%Y%m%d)" >> $GITHUB_ENV
-      - uses: actions/upload-artifact@v3
+      - uses: actions/upload-artifact@v3.1.3
         with:
           name: ${{ inputs.target }}-${{ env.TAG_ANME }}
           path: trunk/images/*.trx
-      - uses: ncipollo/release-action@v1
+      - uses: ncipollo/release-action@v1.13.0
         if: github.event.inputs.release == 'true'
         with:
           commit: ${{ github.sha }}
